--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -50,7 +50,22 @@
 .inspiro-slider.slider-fullscreen {
     height: 80vh;
 }
+.iteam-card{ margin-left: 10px; position: relative; }
+.product-overlay button{
+	width: 100%;
+	border: none;
+	background: #00000085;
+	color: #fff;
+}
+button:focus {
+    outline: none;
+}
 
+.product .product-image img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
 
 @media (max-width: 1024px){
 	.content, .sidebar {
