--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -66,6 +66,9 @@ button:focus {
     height: 200px;
     object-fit: cover;
 }
+.header-extras .p-dropdown .p-dropdown-content{
+    padding-top: 25px;
+}
 
 @media (max-width: 1024px){
 	.content, .sidebar {
